Fix broken overflow-x

--- a/styles/main.css
+++ b/styles/main.css
@@ -12,13 +12,13 @@
                                 supported by Chrome, Edge, Opera and Firefox */
 
   max-width: 100%;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 body {
     scroll-behavior: smooth;
     font-family: 'Raleway', sans-serif;
-    background-color: red;
+    background-color: black;
 }
 
 .wrapper {
